# ImDM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: linux.yml  windows.yml
assets/: CMakeLists.txt  NotoSans-Bold.h  NotoSans-Regular.h  README.md  font2h  icon.png.h
src/: CMakeLists.txt  font.cpp  font.h  i18n.h  log.cpp  log.h  main.cpp  singleton.h  util.h  window.cpp  window.h
